<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuScreen" >

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="25dp" />

    <LinearLayout android:id="@+id/lyt_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_alignParentTop="true" >

        <ImageButton android:id="@+id/img_btn_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/alert_dark_frame" 
            android:contentDescription="@string/char_img_description"/>
		
		<LinearLayout android:id="@+id/lyt_char_data"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
		    android:gravity="center">
		       
	        <TextView android:id="@+id/txt_charname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefix_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
		       
	        <TextView android:id="@+id/txt_level"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefix_level"
	            android:textAppearance="?android:attr/textAppearanceListItem" />
		       
	        <TextView android:id="@+id/txt_winstreak"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefix_winstreak"
	            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
	    </LinearLayout>

    </LinearLayout>

    <ListView android:id="@+id/listview_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_profile"
        android:layout_centerHorizontal="true" >
    </ListView>

</RelativeLayout>
